# ChangeLog for sys-apps/policycoreutils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.109 2012/11/17 16:57:22 swift Exp $

*policycoreutils-2.1.13-r5 (17 Nov 2012)

  17 Nov 2012; <swift@gentoo.org> policycoreutils-2.1.13-r4.ebuild,
  +policycoreutils-2.1.13-r5.ebuild:
  Stabilization, move sesandbox support to next release

*policycoreutils-2.1.13-r4 (14 Oct 2012)

  14 Oct 2012; <swift@gentoo.org> +policycoreutils-2.1.13-r4.ebuild:
  Remove support for python3 until upstream supports it

  13 Oct 2012; <swift@gentoo.org> policycoreutils-2.1.13-r3.ebuild:
  Supporting user-provided patches using epatch_user

*policycoreutils-2.1.13-r3 (09 Oct 2012)

  09 Oct 2012; <swift@gentoo.org> +policycoreutils-2.1.13-r3.ebuild:
  Introducing new upstream release

  06 Oct 2012; <swift@gentoo.org> policycoreutils-2.1.10-r5.ebuild:
  Stabilize

*policycoreutils-2.1.10-r5 (08 Sep 2012)

  08 Sep 2012; <swift@gentoo.org> +policycoreutils-2.1.10-r5.ebuild:
  Fix bug #427596 and #430806

  10 Jul 2012; <swift@gentoo.org> policycoreutils-2.1.10-r3.ebuild:
  Stabilization, drop libcgroup dependency along the way

*policycoreutils-2.1.10-r4 (10 Jul 2012)

  10 Jul 2012; <swift@gentoo.org> +policycoreutils-2.1.10-r4.ebuild:
  Support refpolicy style audit2allow (#417199)

  26 Jun 2012; Mike Gilbert <floppym@gentoo.org>
  policycoreutils-2.1.10-r1.ebuild, policycoreutils-2.1.10-r3.ebuild,
  policycoreutils-2.1.10.ebuild:
  Restrict pypy per Arfrever.

*policycoreutils-2.1.10-r3 (25 Jun 2012)

  25 Jun 2012; <swift@gentoo.org>
  +files/policycoreutils-extra-1.21-fix-python3.patch,
  +policycoreutils-2.1.10-r3.ebuild:
  Improve support for python3, fixes bug #416301

  13 May 2012; <swift@gentoo.org> -policycoreutils-2.1.0-r1.ebuild,
  -policycoreutils-2.1.0-r2.ebuild:
  Removing obsoleted ebuilds

*policycoreutils-2.1.10-r1 (29 Apr 2012)
