@@ -16,6 +16,7 @@ DIST policycoreutils-2.1.10.tar.gz 907554 SHA256 8bbbc36b7d375edff891503932da93e
 DIST policycoreutils-2.1.13.tar.gz 1188940 SHA256 34040f06f3111d9ee957576e4095841d35b9ca9141ee8d80aab036cbefb28584 SHA512 901a966ee61dc0935767f2ee8e8659fca13c96b6ce464a00060a0005764c0d7a0cfce0e2b6b00850ff2b4b20675a16d9a6da427284818e93efd83864ab086c1b WHIRLPOOL e123e474830e66fec70ee850674b0767ab3e115966dc8cae9c6aa6cdd4f9297d7c22a92a41cea9a1b24c994cc44d06af23459a0184546bbd263e4f74b756419e
 DIST policycoreutils-extra-1.21.tar.bz2 12864 SHA256 c2d3627e2a10f83f5de997e9db75c40830e7f3520b558807346c9bd9c49769bb SHA512 b0911711d6d509f70ad44f6f910a17f52ae72a94d37c9254f5009a3a740ac0cf8fa8ecb4506a9bd185db2defd872c3ecbcfebdf93b216a6950052a16008cc54e WHIRLPOOL a25af7e918beb9ba43ee4109647bad1892d5ffb0c0d9b7d20c606b85f9589e2cffbbd07d1187ae0082dcf2aff7b708c433393176f29557b0aa65b9e767813298
 DIST policycoreutils-extra-1.22.tar.bz2 12858 SHA256 7013f77fbbc0eceeffdae6ad7eb31547d1334afe4a6929654440540f6e50b8df SHA512 c9fb2f75ab11e82b6ef366f7ef891a046ade41b87f4c82680ea79c1e3f0cf24edec5d3b68c7f5c8e5da01e754a2100dd8adfc90ac4b2b353745ee4f8c468b036 WHIRLPOOL dd3a30c9f4f57d1640838b755646f33a173012d745ca1a93bf95faea50e01c4d430d4361c77c14e994323b00cfba2c6bb1d9db276ee499dee1a318f02e0b24f8
+DIST policycoreutils-extra-1.23.tar.bz2 12865 SHA256 ad758323fe88ecc5c8689e9a8cdabaaa919d14ade9cc2c6d39761f7d7f14ae9f SHA512 ee92796be2b4eb77f8f25e5174b752fda5bffd5941860a20ebc550e3c0e6e836997f636aeafbaa7ecc51e65786fe0a67915e6d4c01a15c0c7a45a16baf06a762 WHIRLPOOL 70de6a6fb922429af6cda42a3e4e2ad10c49834f37e82de15f88a9f3e4ea02e3668c5e1432c1e5fa21fd62acebb7c1f15256170a26ae47d5e2ef88738410a369
 EBUILD policycoreutils-2.1.10-r1.ebuild 5582 SHA256 e5890c79a891afcaeb8573e343f3886b258a148c2c4ff9005a07436617756674 SHA512 df26769020ced4ce671b0ecd8e7d416e24261b1c7c57609d59e7755ad23fd08ab8aa71454b985c859dbd8512758399d4fef8b3f42c0fb11074ba34e7bde5efef WHIRLPOOL 445f57cc60a824a7573eda19e49a40cc8ba3c04680cdb0ba07759a1254ee3952e5224fc8e6576a919bbdca36b5df817e8dcec082fca035b78055b7be8cff7f9c
 EBUILD policycoreutils-2.1.10-r3.ebuild 4269 SHA256 a19dafdb3286f311c8c5dd5e8337f3c6393bd38c3dbed86eb3063643f11d40c5 SHA512 c1a3382a9718ee957247af0ac556d0841944f4be6229e16c6e3d2639705fce03495fd0008274978b0f8c6a20560ac08aa5d2caf30d3d6fa51919d19bd92b2871 WHIRLPOOL 88b91b2ba7a4742b8abf55f524c125f64b48d0843307fc245efbb1ed7572c442cbd7d70e5ae9c4e68465f573b46fb2204990ff4dc0c2cb42393356ed134983ec
 EBUILD policycoreutils-2.1.10-r4.ebuild 4353 SHA256 b46e61343c552f092abd5fec8ca7dbcf15cd7bc4d79e0f116f35e3e2fd9cae12 SHA512 60b86f353378c9507710914944e451d92d715da194edd594a840939be916e5c2469d454342eee3703b411cb7a5065f9bb4cea80da129aeb6f73ff9e99e7de810 WHIRLPOOL 35d2e1fd75ad7e59a5b2e6b389db2c1557205730085726225899c622ac9e714eb7e2cee7869faf5a24d3732433e741bc81ce54bde02904180d83ef93e1a7d1f0
@@ -23,13 +24,14 @@ EBUILD policycoreutils-2.1.10-r5.ebuild 4108 SHA256 c732158eb03593bd5ecd724481ba
 EBUILD policycoreutils-2.1.10.ebuild 5458 SHA256 a24b6bde380abe3674cf0a36dce8f2d98f2926808ade1941ffa117286003743b SHA512 2d67a7c0d60a89c8d6bdb1aea89d9b2bdbf09ea2c510ca52d6858861c56dea58ddca634dba8a2b9a17d570ad355f6da443896e50f280e23a678cd31e2ac7eb14 WHIRLPOOL dc89233f6c3d6b72e3d71e2288b52761452395ae2e6d5f0b327eb1fef24b480c5afb18e161e82ade401d84301d7d2c822d14db2ee3884808fc452bc8d50ff736
 EBUILD policycoreutils-2.1.13-r3.ebuild 4244 SHA256 c5d6b0fd58a7648b980ee39ad590deafcefc18f102a52232e8f685dd1447da70 SHA512 fa76d2002c503d0286bed86992f827b56db1bfb410c667580b5fe4d3385c3500334c86058e4e25de7538c270b8b3cccc51768a8d0e4aa341d58e9f39e4d564f6 WHIRLPOOL 61800aa8b33638417c6b4fdd4f9782d157dbaa15e02f95e7edbd27ca172961cd1ad7cf5d4aabddcf0a926ac7af5036685ccdfccc2f1990aac65ecda772c8cfea
 EBUILD policycoreutils-2.1.13-r4.ebuild 4130 SHA256 d0c1573eab80bf34b84d828d5ca27881f79b0b4283668bd19ed9de01e6646dc7 SHA512 45f3c5b93732b9ade28389dae780b7080d3744ed064d7a2735df9d9eec45593a02c3877f48d18d2a7f76171a2ed1422998f8362ae9cfe5995bf30834442e0116 WHIRLPOOL 8b36280ce3df5eae886cba5dbb160dcc77028cd0f142415d2c0495d628b677860bdf16da846fddd56be372a2191eae229b063a6a28bc037f320edc556b5713b8
-EBUILD policycoreutils-2.1.13-r5.ebuild 4251 SHA256 b3514c05c214a44be889cf3c2eeb3ed8758cadd7afdd80f917e05e6c9903fec6 SHA512 5981199fc7102f556d90da3a7b28d9b1c40bcdc53fc8fea6e5de4e9d7d65cd40244ba432be043ec13b775ca6609158e8624f8e758c047227d7ea550752d852f6 WHIRLPOOL a3c7d8b1fa9fe742840b9d5b6a8920badf221530cd0b3631849db0b6dc4354be898b6c0936e87b2b06e47cf013e63ab7f900987d7411aba5048d7d067be32ac7
-MISC ChangeLog 17555 SHA256 fc8db104519e79de96e5b71325ee630ff6a98992a47ee652904bea8c732de436 SHA512 ca8e2ffc51c178b44cd8816d82215935be3bf6d94f15c490e86e81ac0b1bbb75e458506625137e8f3e13fb781dc309929bc6a6f7a2ebc8652a2aed5e06f92706 WHIRLPOOL f88b1e5d4997c748ef8d726b9a50dea4c84c22bb7de248f6343895c82f574624cf760fd3c201ed02f07ef821277af507cfaa9a252407c68546719e8ece0110d3
+EBUILD policycoreutils-2.1.13-r5.ebuild 4130 SHA256 3ac83a8ab5b39702ae19d6162286404f99fef710e046fffb07cc5672060f2141 SHA512 4533a2ebe763f2af58e5d7e0d9c1235fc77aa267355f78d3a390816fa1b5c020a7e7744a134bb0cb343836ee3b84dc93a6b2c1d99109e5e09eb0ad9bff23275e WHIRLPOOL 0759d07d2b4f8943f1ae7ce8689ce33fa01f15cbac7ef75dc00620a45d66e569074ce203875ed93dba8077af2792f4e30004499c2be454c38e2a5eb246ff8d64
+EBUILD policycoreutils-2.1.13-r6.ebuild 4251 SHA256 32aa76856d93e38817ef13901dd81eae55bb0d98fecebeb06d9ed95ab84cccf0 SHA512 3e80fc32f934d4010b061ccdc6046c363724dc5ac7f9c5bca9b738364da03d2335d226b1fd84113b1028f0a036db0f0b4d1140acdff08ac8d0fe23cb047e66d0 WHIRLPOOL e29dee6b2a16a02432a7f836b1ef2515c971215a60bc93205aedc9c1c1f9fe8d7adad093cea7cd2cd5e8c2911cde38e494731613721375b5559c52f1067606f4
+MISC ChangeLog 17783 SHA256 bb3493aa07a82c3bdbaa41f2a1d3a8514102a9ac77247db6f791ff406e88e0c0 SHA512 d1f69d89c69568443782f9daa9b00f0a12d0f647e5fb8a35b799362cd261212521414d5fec3b7e5da2ca84327b33093ef84d8d7aab086e1b42c2f7f6fdb00e49 WHIRLPOOL 1106e66af6ab6c65e84cb8581975d50586506375754cd3c77da77dbe836310147ae3dddbd65fa3b4731e6490ed5d050a2763a6469de2a046b883c9e0abd4bca4
 MISC metadata.xml 959 SHA256 6683014987dd67dfbeb80ad329550fc20a0b09f5eaa7828054be62fff6aee391 SHA512 d44168511571036289259b0709fcb12f934bd789d872e256bf00b7b88247f08b5c5f6bbcf60e0ed654f391606f6c41baca92aa7208a80526ef01c2c34f06b962 WHIRLPOOL 59c9757a028d1731dac9abd05ee768fd153c303257a14acf4d53290e4108eecc45abbb879ef2143141b9d03cf3dc94e0ba1bdc8ed7b01f0d2ad84db5fb9f347e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCnwekACgkQXfqz7M26L9sgJwCfTnAEzt+Yb+k2DX8Qc4uGFi4J
-ILMAoI51WK6owDiD3xvXDXxZtaIPFUsy
-=k7wU
+iEYEAREIAAYFAlDgWbIACgkQXfqz7M26L9sfXgCfai2eZS50nOEUZTBxcPsm8Zwr
+/gUAn2muEYPjgsIjc5qpWzMb0hK3AKhG
+=UK4W
 -----END PGP SIGNATURE-----
