@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/policycoreutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.109 2012/11/17 16:57:22 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.110 2012/12/30 15:12:00 swift Exp $
+
+*policycoreutils-2.1.13-r6 (30 Dec 2012)
+
+  30 Dec 2012; Sven Vermeulen +policycoreutils-2.1.13-r6.ebuild,
+  policycoreutils-2.1.13-r5.ebuild:
+  Stabilize r5, get r6 available as well which fixes rlpkg to include zfs
+  support
 
 *policycoreutils-2.1.13-r5 (17 Nov 2012)
 
